# oxichrome

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/color-picker/: Cargo.toml
examples/color-picker/src/: lib.rs
examples/counter-extension/: Cargo.toml
examples/counter-extension/src/: lib.rs
oxichrome/: Cargo.toml
oxichrome-build/: Cargo.toml  README.md
oxichrome-build/src/: lib.rs  manifest.rs  shims.rs  source_parser.rs  templates.rs
oxichrome-cli/: Cargo.toml
oxichrome-cli/src/: main.rs
oxichrome-cli/src/commands/: build.rs  clean.rs  mod.rs  new.rs
oxichrome-core/: Cargo.toml  README.md
oxichrome-core/src/: error.rs  js_bridge.rs  lib.rs  runtime.rs  storage.rs  tabs.rs
oxichrome-macros/: Cargo.toml  README.md
oxichrome-macros/src/: error.rs  lib.rs  parse.rs
oxichrome-macros/src/codegen/: background.rs  content_script.rs  event_handler.rs  extension.rs  mod.rs  options_page.rs  popup.rs
oxichrome/src/: lib.rs
