[workspace]
resolver = "2"
members = [
    "oxichrome",
    "oxichrome-core",
    "oxichrome-macros",
    "oxichrome-build",
    "oxichrome-cli",
    "examples/counter-extension",
    "examples/color-picker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xsouravm/oxichrome"
authors = ["Sourav Mishra <sourav.m.bt@gmail.com>"]
