[package]
name = "cargo-oxichrome"
description = "CLI build tool for oxichrome"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cargo-oxichrome"
path = "src/main.rs"

[dependencies]
oxichrome-build = { version = "0.1.0", path = "../oxichrome-build" }
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
serde_json = "1.0.149"
