[package]
name = "oxichrome-core"
description = "Chrome Extension API bindings and runtime for oxichrome"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
js-sys = "0.3.85"
web-sys = { version = "0.3.85", features = ["console"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.18"
